--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
+    "tsd": "^0.7.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
